# libusb2ax

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  demo.cpp  pi3-cmdline.txt  usb2ax.rules
docs/: Makefile  conf.py  index.rst  make.bat  udev_rule.rst
docs/hardware/: pi3.rst
src/: CMakeLists.txt  Global.hpp  InstructionPacket.hpp  ReadOnly.hpp  ServoManager.cpp  ServoManager.hpp  StatusPacket.cpp  StatusPacket.hpp  demo.cpp  test.cpp
src/Adapter/: Baudrate.hpp  USB2AX.cpp  USB2AX.hpp  Usb2Dynamixel.cpp  Usb2Dynamixel.hpp
src/Controller/: Baudrate.hpp  USB2AX.cpp  USB2AX.hpp
src/Exception/: Exceptions.hpp
src/Protocol/: Baudrate.hpp  Protocol1.cpp  Protocol1.hpp  Protocols.hpp
src/Servo/: AX12.hpp  AlarmLEDValues.cpp  AlarmLEDValues.hpp  ManagedProtocol1Servo  ManagedProtocol1Servo.cpp  ManagedProtocol1Servo.hpp  Protocol1Model.cpp  Protocol1Model.hpp  Protocol1Servo.cpp  Protocol1Servo.hpp  Protocol1ServoCommands.cpp  Protocol1ServoCommands.hpp  ServoManager.cpp  ServoManager.hpp  ServoModels.hpp  ServoRegister.hpp  Servos.hpp
tests/: ReadOnly_test.cpp  test.cpp
